--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "reformas",
   "private": true,
@@ -9,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react/jsx-runtime": "^19.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.0.1"
+    "react/jsx-runtime": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
