--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vercel/node": "^3.2.5",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
     "tailwindcss": "^3.4.7",
