--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "proj4": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -21,6 +22,7 @@
     "vite": "^5.3.5",
     "tailwindcss": "^3.4.7",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39"
+    "postcss": "^8.4.39",
+    "@types/proj4": "^2.5.5"
   }
 }
