--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,17 @@
-it
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/catastro-proxy.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ]
+}
+
