--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,24 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/catastro-proxy.ts",
-      "use": "@vercel/node"
-    },
-    {
+    { 
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
+    },
+    { 
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { 
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    { 
+      "src": "/(.*)",
+      "dest": "/app.html"
     }
   ]
 }
-
