--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "proj4": "2.10.0"
+    "proj4": "2.10.0",
+    "@google/genai": "^0.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
