--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
+
 {
   "version": 2,
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    },
     {
       "src": "api/**/*.ts",
       "use": "@vercel/node"
@@ -14,7 +10,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1.ts"
+      "dest": "/api/$1"
     },
     {
       "src": "/(.*)",
