--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
-
 {
   "version": 2,
   "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/vite",
+      "config": { "distDir": "dist" }
+    },
     {
       "src": "api/**/*.ts",
       "use": "@vercel/node"
