--- a/vercel.json
+++ b/vercel.json
@@ -17,9 +17,11 @@
       "dest": "/api/$1"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
   ]
 }
-
